--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
     - run: npm run build --if-present
     - name: Test
       run: npm test
-    - name: Eslint
-      run: npm run eslint -- --max-warnings 0
+    - name: lint
+      run: npm run lint
