--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,6 @@ jobs:
     - run: npm install react-scripts
     - run: npm run build --if-present
     - name: Test
-      run: npm test
+      run: CI=true npm test
     - name: lint
       run: npm run lint
