--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,8 +23,10 @@ jobs:
     - name: Install
       run: npm ci
     - run: npm install react-scripts
-    - run: npm run build --if-present
+    - name: lint
+      run: npm lint
+    - run: npm prettier
     - name: Test
       run: CI=true npm test
-    - name: lint
-      run: npm run lint
+    - run: npm run build
+    
