--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
     - name: lint
       run: npm run lint
     - name: Run Prettier
-      run: npm run prettier
+      run: npm run prettier:check
     - name: Test
       run: CI=true npm test
     - run: npm run build
