--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/",
-    "prettier": "prettier --check ."
+    "prettier": "prettier -c ./src/"
   },
   "eslintConfig": {
     "extends": [
