--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,6 +25,7 @@ jobs:
     - run: npm install react-scripts
     - name: lint
       run: npm run lint
+    - run: npm run format
     - name: Run Prettier
       run: npm run prettier
     - name: Test
