--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint ./src/",
+    "format": "prettier --write ./src/",
     "prettier": "prettier -c ./src/"
   },
   "eslintConfig": {
